--- a/win/resgen/resgen.csproj
+++ b/win/resgen/resgen.csproj
@@ -55,6 +55,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ByteTools.cs" />
+    <Compile Include="ResourceGenerator.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
